Added security Added aspect for logger
