# Core/src/main/resources/swagger.yml
@@ -37,6 +37,8 @@ paths:
       operationId: "getAllUsers"
       tags:
         - "Users"
+      security:
+        - BearerAuth: [ ]  # Reference to the security schema
       parameters:
         - name: Authorization
           in: header
@@ -44,13 +46,6 @@ paths:
           required: true
           schema:
             type: string
-        - name: page
-          in: query
-          description: "Page number for pagination"
-          required: false
-          schema:
-            type: integer
-            default: 1
       responses:
         '200':
           description: "Successful response"
@@ -143,6 +138,11 @@ components:
         email:
           type: string
           example: "john.doe@example.com"
+
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
 
   responses:
     NotFoundResponse:
